* Sat Jun 07 23:04:02 2003, pabs <pabs@pablotron.org>
  * added ChangeLog
  * initial import

* Sat Jun 07 23:09:10 2003, pabs <pabs@pablotron.org>
  * README: added requirements (YAML?)

* Sat Jun 07 23:50:58 2003, pabs <pabs@pablotron.org>
  * raggle: added window type (for scrolling and selection behavior)
  * raggle: removed some old comments

* Sat Jun 07 23:52:03 2003, pabs <pabs@pablotron.org>
  * added COPYING

* Sun Jun 08 00:28:48 2003, pabs <pabs@pablotron.org>
  * raggle: added text reflow in Window#draw()
  * raggle: using start of "The Saturn Game" to demonstrate text reflow
  * raggle: added Link and Date fields to Description window

* Sun Jun 08 07:59:37 2003, pabs <pabs@pablotron.org>
  * raggle: combined item_focus and hilite_auto_select into focus
  * raggle: sane keyboard configuration

* Sun Jun 08 08:04:46 2003, pabs <pabs@pablotron.org>
  * raggle: added brief documentation to each method